--- a/interface/material_stat.ui
+++ b/interface/material_stat.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>594</width>
-    <height>827</height>
+    <width>632</width>
+    <height>851</height>
    </rect>
   </property>
   <property name="font">
@@ -199,6 +199,19 @@ border-color: rgba(255, 255, 255, 0);
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QPushButton" name="open_search_manage_modal_btn">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text">
+                <string>🔍︎</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
@@ -233,7 +246,7 @@ border-color: rgba(255, 255, 255, 0);
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>208</width>
+                  <width>227</width>
                   <height>524</height>
                  </rect>
                 </property>
@@ -427,7 +440,7 @@ border-color: rgba(255, 255, 255, 0);
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>208</width>
+                  <width>227</width>
                   <height>524</height>
                  </rect>
                 </property>
@@ -621,7 +634,7 @@ border-color: rgba(255, 255, 255, 0);
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>207</width>
+                  <width>226</width>
                   <height>524</height>
                  </rect>
                 </property>
@@ -815,7 +828,7 @@ border-color: rgba(255, 255, 255, 0);
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>207</width>
+                  <width>226</width>
                   <height>524</height>
                  </rect>
                 </property>
